End of lesson COMMIT
